--- a/acceuil ecole.html
+++ b/acceuil ecole.html
@@ -22,7 +22,7 @@
         <ul>
             <li><a href="profs.HTML">Professeurs</a></li>
             <li><a href="MATI7RES.html">Matières</a></li>
-            <li><a href="#exercices">Exercices</a></li>
+            <li><a href="EXERCICES.HTML">Exercices</a></li>
             <li><a href="#examens">Examens</a></li>
             <li><a href="COMMENTAIRES.html">Commentaires</a></li>
             <li><a href="contact.html">INSCRIPTION</a></li>
