--- a/EXERCICES.HTML
+++ b/EXERCICES.HTML
@@ -23,11 +23,11 @@
 
     <main>
         <section>
-            <h2>Liste des Professeurs</h2>
+            <h2>Liste des Niveaux</h2>
             <ul>
-                <li><a href="REDOUANE.HTML" target="">REDOUANE</a></li>
-                <li><a href="" target="_blank">TARIK</a></li>
-                <li><a href="" target="_blank">BADR</a></li>
+                <li><a href="REDOUANE.HTML" target="">2BAC SCIENCE</a></li>
+                <li><a href="" target="_blank">1 BAC SCIENCE </a></li>
+                <li><a href="" target="_blank">TRONC COMMUN</a></li>
                 
                 <!-- Ajoutez d'autres exercices ici -->
             </ul>
