--- a/profs.HTML
+++ b/profs.HTML
@@ -22,16 +22,16 @@
     </header>
 
     <section class="professeur">
-        <img src="WhatsApp Image 2023-11-11 at 12.14.48_b4d719a0.jpg" width="20%">
+        <img src="REDOUANE PHOTO.jpg" width="20%">
         <h2>Redouane</h2>
-        <p>Professeur de mathématiques
+        <p>
 
             <p>Professeur de mathématiques</p>
             <p class="motivation">Les mathématiques sont la clé de la compréhension du monde qui nous entoure. Mon objectif est de rendre les mathématiques passionnantes et accessibles à tous les élèves. Ensemble, nous surmonterons les défis et construirons une solide base mathématique.</p>
         </section>
 
     <section class="professeur">
-        <img src="WhatsApp Image 2023-11-11 at 12.21.29_4f28fa1b.jpg" width="40%">
+        <img src="YOUSSEF PHOTO.jpg" width="40%">
         <h2>Badr</h2>
         <p>Professeur de FRANCAIS </p>
         <p class="motivation">Je suis passionné par la langue française et j'aspire à partager ma passion avec mes élèves. Ensemble, nous explorerons la richesse de la littérature et de la langue française, tout en développant des compétences solides en communication.</p>
