--- a/profs.HTML
+++ b/profs.HTML
@@ -22,7 +22,7 @@
     </header>
 
     <section class="professeur">
-        <img src="REDOUANE PHOTO.jpg" width="20%">
+        <img src="redouane photo 2.jpg" width="20%">
         <h2>Redouane</h2>
         <p>
 
