--- a/acceuil ecole.html
+++ b/acceuil ecole.html
@@ -40,8 +40,8 @@
 
     <!-- Professeurs Section -->
     <section id="professeurs">
-        <h2>Nos Professeurs</h2>
-        <p>Découvrez nos enseignants qualifiés et expérimentés.</p>
+       
+        <img src="2020.jpg" alt="">
         <!-- Ajoutez des informations sur les professeurs ici -->
     </section>
 
