--- a/EXERCICES.HTML
+++ b/EXERCICES.HTML
@@ -25,7 +25,7 @@
         <section>
             <h2>Liste des Niveaux</h2>
             <ul>
-                <li><a href="REDOUANE.HTML" target="">2BAC SCIENCE</a></li>
+                <li><a href="2BAC.HTML" target="">2BAC SCIENCE</a></li>
                 <li><a href="" target="_blank">1 BAC SCIENCE </a></li>
                 <li><a href="" target="_blank">TRONC COMMUN</a></li>
                 
