--- a/EXERCICES.HTML
+++ b/EXERCICES.HTML
@@ -26,7 +26,7 @@
             <h2>Liste des Niveaux</h2>
             <ul>
                 <li><a href="2BAC.HTML" target="">2BAC SCIENCE</a></li>
-                <li><a href="" target="_blank">1 BAC SCIENCE </a></li>
+                <li><a href="1BAC.html" target="_blank">1 BAC SCIENCE </a></li>
                 <li><a href="" target="_blank">TRONC COMMUN</a></li>
                 
                 <!-- Ajoutez d'autres exercices ici -->
